Lesson 11 Group Task - Overflow Issue Fixed

--- a/Ogrenciler/Ege/Lessons/11-29_03_2023/Task/style.css
+++ b/Ogrenciler/Ege/Lessons/11-29_03_2023/Task/style.css
@@ -24,8 +24,8 @@ body {
 .big-boy {
     overflow: hidden;
     width: 100%;
-    height: 100%;
-    z-index: -1;
+    min-height: 100vh;
+    padding-top: 100px;
 }
 
 img {
@@ -40,6 +40,7 @@ img {
     left: 0;
     right: 0;
     bottom: 0;
+    z-index: -1;
 }
 
 .right-out {
@@ -50,6 +51,8 @@ img {
     left: 40%;
     right: 0;
     bottom: 0;
+    z-index: -1;
+
 }
 
 .wavy-img {
@@ -127,6 +130,7 @@ h2.heading {
 .sub-btn input {
     padding: 25px 24px;
     border-radius: 10px;
+    margin: 16px;
     color: #fff;
     background-color: #0c7f86;
     font-size: 16px;
@@ -223,16 +227,16 @@ h2.heading {
     position: relative;
 }
 
-/* .big {
+.big {
     position: absolute;
     width: 800px;
     height: 800px;
     border-radius: 50%;
     border: 2px solid #0c7f86;
     animation: big-c 10s infinite;
-} */
+}
 
-/* .small {
+.small {
     position: absolute;
     width: 345px;
     height: 345px;
@@ -241,10 +245,10 @@ h2.heading {
     animation: small-c 10s ease-in-out infinite;
     top: -10px;
 
-} */
+}
 
 
-.profile-img::before {
+/* .profile-img::before {
     content: '';
     position: absolute;
     top: -45px;
@@ -272,7 +276,7 @@ h2.heading {
     user-select: none;
     z-index: 0;
     animation: big-c 10s linear infinite alternate;
-}
+} */
 
 @keyframes big-c {
     0% {
@@ -363,6 +367,17 @@ h2.heading {
 
     .inp-ico {
         display: none;
+    }
+
+    .sub-btn {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+    }
+
+    .sub-btn input {
+        width: 85%;
     }
 
     .cont {
